src/objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>CSP-3075 &amp; CSP-3077</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dynamics_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dynamics ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Local Sales Region</label>
        <lookupFilter>
            <active>false</active>
            <infoMessage>Local Sales Region is filtered based on Primary Brand.  You may override this filter manually by clicking &quot;Show All Results&quot; below.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Markets</relationshipLabel>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Market ID</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_Tier__c</fullName>
        <label>Market Tier</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-3057</description>
        <label>Print Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Market_Print_Specialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>MRKT-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a sales rep</errorMessage>
            <filterItems>
                <field>User.Division</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Types__c</fullName>
        <label>Service Types</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Description__c</fullName>
        <inlineHelpText>This field is copy of Short description and will be updated automatically if it&apos;s blank.</inlineHelpText>
        <label>Zuora Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Short_Description__c</columns>
        <columns>NAME</columns>
        <columns>Local_Sales_Region__c</columns>
        <columns>Market_Tier__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Active__c</columns>
        <columns>Market_ID__c</columns>
        <columns>Zuora_Description__c</columns>
        <columns>Dynamics_ID__c</columns>
        <columns>Reference_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ray</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>Ray</label>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Market_ID</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK( Market_ID__c ),
   FALSE,  /* do not validate if empty */
   OR(
      LEN(Market_ID__c) &lt;&gt; 3,  /* must be 3 characters */
      NOT(ISNUMBER(Market_ID__c))  /* must be numeric */
     )
  )</errorConditionFormula>
        <errorDisplayField>Market_ID__c</errorDisplayField>
        <errorMessage>Market ID must be 3 digits</errorMessage>
    </validationRules>
</CustomObject>